--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coloors</title>
+    <title>Coloors | A simple color pallete generator</title>
+    <link rel="icon" href="logo.png" />
     <link
       href="https://fonts.googleapis.com/css?family=Muli:400,700&display=swap"
       rel="stylesheet"
